--- a/Plans.html
+++ b/Plans.html
@@ -20,9 +20,10 @@
         <div class="panel-heading extender" id="extender1">Near Future</div>
         <div class="panel-body" id="extended1">
             <p>In the near future if we continue with this project we would have to remove all the bugs,
-                perform more focus groups and find more ways to test our application. Here are some fo the most important
-            aspects that we are looking to accomplish in the near future:
+                perform more focus groups and find more ways to test our application. Here is a list of all we would want to accomplish
+                in case we continue with the project:
             <ul>
+                <li>Complete Could Haves of MoSCoW</li>
                 <li>Remove Bugs</li>
                 <li>Focus groups</li>
                 <li>More Better Tests</li>
@@ -62,8 +63,8 @@
                 information that we may be missing.</i></p>
 
             <p>
-                Looking back at our previous plan, we have accomplished everything that we have set out to do and followed our plan well. Very few problems actually occurred
-                and everything was finished on time.
+                <b>Looking back at our previous plan, we have accomplished everything that we have set out to do and followed our plan well. Very few problems actually occurred
+                    and everything was finished on time.</b>
 
             </p>
         </div>
@@ -72,8 +73,10 @@
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender3">End Result</div>
         <div class="panel-body" id="extended3">
-            <p>In the end we have finnished the application before the deadline and our clients are happy with the end result. In the MoSCoW requirements
-            we have completed all the must and should requirements and we have even moved onto the could requirements.</p>
+            <p>We have succeeded in implementing a proof of concept for our system. We have come to this conclusion as in the last iteration
+                we had received very good feedback from users on the functionality and interface of both the mobile and web application. Also we
+                managed to meet all the must haves in the MoSCoW analysis and a decent number of our should haves. However, if we had more time some
+                things could have been done differently. </p>
         </div>
     </div>
     <!-- end main text-->
