--- a/Solution.html
+++ b/Solution.html
@@ -65,6 +65,10 @@
                 </ul></li>
 
             </ul>
+
+            <br><br>
+            <b>Link to application</b><br>
+            <a href="https://safe-atoll-64469.herokuapp.com/bonds/">Web App</a>
         </div>
     </div>
     <div class="panel panel-primary">
@@ -73,28 +77,31 @@
             <ul>
                 <h2>Authentication and User Profiles</h2>
                 <ul>
-                    <li>We implement authentication using a simple username/password. In the backend, we have a User object that consists of this username and password, as well as more information including the user’s name and email. Associated with each User object is a UserProfile object. This includes further information such as the user’s language, security question and answer, and premium bond winnings.</li>
-                    <li>Authentication on the REST API is achieved through tokens. Each User has an associated REST Auth token. The token is obtained by the app by “posting” to the “login” endpoint of the API with the user’s credentials. Upon successful authentication, the token is sent back to the app. This token is subsequently included in every request made by the app within a HTTP header. This is used to identify and thus authenticate the user when the backend receives API requests from the mobile app. </li>
+                    <li>We implement authentication using a simple username/password. In the backend, we have a User object that consists of this username and password, as well as more information including the user's name and email. Associated with each User object is a UserProfile object. This includes further information such as the user’s language, security question and answer, and premium bond winnings.</li>
+                    <li>Authentication on the REST API is achieved through tokens. Each User has an associated REST Auth token. The token is obtained by the app by <q>posting</q>> to the <q>login</q> endpoint of the API with the user’s credentials. Upon successful authentication, the token is sent back to the app. This token is subsequently included in every request made by the app within a HTTP header. This is used to identify and thus authenticate the user when the backend receives API requests from the mobile app. </li>
                 </ul></li>
                 <h2>Creating, Viewing and Updating Accounts</h2>
                 <ul>
-                    <li>Our mobile app allows the user to create, view and manage simulated versions of NS&I’s savings products (direct savers, income bonds etc.) </li>
+                    <li>Our mobile app allows the user to create, view and manage simulated versions of NS and Is savings products (direct savers, income bonds etc.) </li>
                     <li>Accounts are stored as objects in our database. For each different type of account (direct savers etc.), we have a static object in our ProductInfo table that contains the features of that account type (i.e. interest rate, minimum deposit etc.). Each account is linked to one of these static ProductInfo objects. Each account then also has a balance, and a link to the User that owns the account.</li>
                     <li>The API includes endpoints to allow for account creation, modification and reading. </li>
-                    <li>Creation is achieved through a (authenticated) “post” request to the “accounts” endpoint with a JSON object specifying the account type (i.e. direct saver etc.). The backend will then initialise and save a new account of that type with balance 0 with the authenticated user as the owner.</li>
-                    <li>The API user can access accounts in two ways. If they run an authenticated “get” request on the “accounts” endpoint, they will receive a concise list of all of the authenticated users’ accounts. If they run a “get” request on the “account/<id>/” endpoint, they will receive detailed information about the account with the specified id (provided they are the owner of that account).</li>
-                    <li>Modification is achieved through 3 endpoints for deposits, withdrawals and transfers to/from/between accounts. All of these are extensions of the “account/<id>/” endpoint. The deposit and withdrawal endpoint both accept “post” requests with an “amount” specified in the JSON object. Obviously this is the amount to be deposited or withdrawn. The transfer endpoint is the same except it takes a “destination” (id of the destination account) as a parameter as well. </li>
+                    <li>Creation is achieved through a (authenticated) <q>post</q> request to the <q>accounts</q> endpoint with a JSON object specifying the account type (i.e. direct saver etc.). The backend will then initialise and save a new account of that type with balance 0 with the authenticated user as the owner.</li>
+                    <li>The API user can access accounts in two ways. If they run an authenticated <q>get</q> request on the <q>accounts</q> endpoint, they will receive a concise list of all of the authenticated users’ accounts. If they run a <q>get</q> request on the <q>account/id/</q> endpoint, they will receive detailed information about the account with the specified id (provided they are the owner of that account).</li>
+                    <li>Modification is achieved through 3 endpoints for deposits, withdrawals and transfers to/from/between accounts. All of these are extensions of the <q>account/id/</q> endpoint. The deposit and withdrawal endpoint both accept “post” requests with an “amount” specified in the JSON object. Obviously this is the amount to be deposited or withdrawn. The transfer endpoint is the same except it takes a <q>destination</q> (id of the destination account) as a parameter as well. </li>
                 </ul></li>
                 <h2>Syndicates</h2>
                 <ul>
                     <li>Syndicates are stored as objects in our database. Syndicates have a User owner, a name, total winnings, and a set of Users (the syndicate members). The membership relationship is a many-to-many relationship and is implemented by Django using a third (hidden) user-syndicate table that maps users to the syndicates they are members of. To check if a User belongs to a Syndicate, this table is queried to see if there is one row with both the User and the Syndicate.</li>
-                    <li>The API exposes Syndicates to creation and read operations. API users can post to the “Syndicates” endpoint with the name of the new syndicate and a list of emails to create a new syndicate with that name and those users with those emails as members. The API user can run a “get” request on “syndicates” to get a list of the syndicates that the user is part of. The “syndicate/<id>/” endpoint will give more detail about a specific syndicate with id=id including a list of members, their shares in the syndicate, the total group investment and total group winnings.</li>
+                    <li>The API exposes Syndicates to creation and read operations. API users can post to the “Syndicates” endpoint with the name of the new syndicate and a list of emails to create a new syndicate with that name and those users with those emails as members. The API user can run a <q>get</q> request on <q>syndicates</q> to get a list of the syndicates that the user is part of. The <q>syndicate/id/</q> endpoint will give more detail about a specific syndicate with id=id including a list of members, their shares in the syndicate, the total group investment and total group winnings.</li>
                 </ul></li>
                 <h2>Premium Bonds</h2>
                 <ul>
                     <li>Each individual premium bond (sole or group owned) is represented as a single object in the database. </li>
-                    <li>Sole owned bonds are associated with their user-owner, while group owned bonds are associated with both their group-owners and the user who purchased the bond within the group. This is done to keep track of how much each user has invested in the group.</li>
-                    <li>The API has multiple endpoints that allow users to view and manage their premium bonds. The user can run a “get” request on “user/bonds” to see the amount of sole-owned bonds they own and see their winnings. They can “post” to this endpoint with an “amount” and “transaction_kind” to buy or sell sole-owned bonds. Similar operations are available on the “syndicate/<id>/bonds” endpoint, except they relate to group owned bonds within the syndicate with id=id.</li>
+                    <li>Sole owned bonds are associated with their user-owner, while group owned bonds are associated with both their group-owners and the user who purchased the bond
+                        within the group. This is done to keep track of how much each user has invested in the group.</li>
+                    <li>The API has multiple endpoints that allow users to view and manage their premium bonds. The user can run a <q>get</q> request on <q>user/bonds</q> to see the amount of sole-owned
+                        bonds they own and see their winnings. They can <q>post</q> to this endpoint with an <q>amount</q> and <q>transaction_kind</q> to buy or sell sole-owned bonds. Similar operations are
+                        available on the <q>syndicate/id/bonds</q> endpoint, except they relate to group owned bonds within the syndicate with id=id.</li>
                 </ul></li>
 
             </ul>
